@@ -47,15 +47,15 @@ endif
 
 a1=[,1,2,3,4,5,,7,8,]
 a2=["",1,2,3,4,5,"",7,8,""]
-if (a1 != a2) then
+if (a1 != a2 or 9 != ubound(a1)) then
   ? a1
   ? a2
   throw "Empty entries not included in array"
 endif
 
-'s=",1,2,3,4,5,,7,8,"
-'split s,",",a
-'if (n != ubound(a)) then
-'  ? a
-'  throw "Final empty entry was ignored"
-'endif
+s=",1,2,3,4,5,,7,8,"
+split s,",",a
+if (9 != ubound(a)) then
+  ? a
+  throw "Final empty entry was ignored"
+endif
